@@ -1,4 +1,4 @@
-/* $Id: gamerend.c,v 1.21 2006-02-26 05:55:22 chris Exp $ */
+/* $Id: gamerend.c,v 1.22 2006-11-26 01:05:24 chris Exp $ */
 /*
 THE COMPUTER CODE CONTAINED HEREIN IS THE SOLE PROPERTY OF PARALLAX
 SOFTWARE CORPORATION ("PARALLAX").  PARALLAX, IN DISTRIBUTING THE CODE TO
@@ -23,7 +23,7 @@ COPYRIGHT 1993-1999 PARALLAX SOFTWARE CORPORATION.  ALL RIGHTS RESERVED.
 #endif
 
 #ifdef RCS
-static char rcsid[] = "$Id: gamerend.c,v 1.21 2006-02-26 05:55:22 chris Exp $";
+static char rcsid[] = "$Id: gamerend.c,v 1.22 2006-11-26 01:05:24 chris Exp $";
 #endif
 
 #include <stdio.h>
@@ -1010,8 +1010,9 @@ void game_render_frame_mono(void)
 						&VR_render_sub_buffer[0].cv_bitmap, 
 						&VR_screen_pages[0].cv_bitmap );
 			}
+//		}
 #if 0
-		} else	{
+		else	{
 			#ifdef __MSDOS__
 				gr_ibitblt( &VR_render_buffer[0].cv_bitmap, &VR_screen_pages[0].cv_bitmap, Game_cockpit_copy_code );
 			#else //def MACINTOSH
